--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,14 @@
 			<dependency>
 				<groupId>org.springframework.cloud</groupId>
 				<artifactId>spring-cloud-dependencies</artifactId>
-				<version>2.2.3.RELEASE</version>
+				<version>Hoxton.SR1</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-dependencies</artifactId>
+				<version>2.3.2.RELEASE</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
